--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Riley Moore
-title: 
+title: Riley Moore's Flatiron Blog
 header-img: img/home-bg.png
 email: rilemoore@gmail.com
 copyright_name: Riley Moore
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Experiences and Challenges
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  rilemoore
